write man write...
Signed-off-by: Alexander McMurray <alexgmcm@gmail.com>

--- a/Dissertation/report.tex
+++ b/Dissertation/report.tex
@@ -59,6 +59,7 @@
   \input{sections/intro}
   \input{sections/background}
   \input{sections/methodology}
+  \input{sections/analysiseval}
   \input{sections/conclusion}
 
   % Appendix
